force-app/main/default/objects/Card__c/fields/Card_Number_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Card_Number_Last_4__c</fullName>
    <label>Card Number Last 4</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>