force-app/main/default/objects/Card__c/fields/Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Cardholder_Name__c</fullName>
    <label>Card Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>