force-app/main/default/objects/Card__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>