force-app/main/default/objects/Card__c/fields/Masked_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Masked_Card_Number__c</fullName>
    <formula>&quot;XXXXXXXXXXXXXXXX&quot; + TEXT(Card_Number_Last_4__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Masked_Card_Number</label>
    <type>Text</type>
</CustomField>