force-app/main/default/objects/Card__c/fields/Original_Card__c.field-meta.xml
<CustomField>
    <fullName>Original_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Card</label>
    <referenceTo>Card__c</referenceTo>
    <relationshipLabel>Cards</relationshipLabel>
    <relationshipName>Related_Cards</relationshipName>
    <type>Lookup</type>
</CustomField>